# youtubemusic

./: .gitattributes  .gitignore  DEBUGGING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml  release.yml  test.yml
aur/: .SRCINFO  PKGBUILD  youtube-music-client  youtube-music-client.desktop
aur-git/: .SRCINFO  .gitignore  PKGBUILD  youtube-music-client  youtube-music-client.desktop
electron/: discord-presence.cjs  kde-accent.cjs  main.cjs  mpris-linux.cjs  preload-settings.cjs  preload-titlebar.cjs  preload-ytm.cjs  settings-bridge.cjs  titlebar.html
electron/scripts/: playback-ad.cjs  playback-ad.test.cjs  playback-poll.js
inject/: playback-observer.js
patches/: discord-rpc+4.0.1.patch
plugins/: README.md
plugins/Multi-Source Lyrics/: index.js  manifest.json
plugins/Multi-Source Lyrics CC/: index.js  manifest.json
plugins/example/: index.js  manifest.json
plugins/fine-volume-control/: index.js  manifest.json
scripts/: copy-icon.cjs
src/: App.css  App.test.tsx  App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.toml
src-tauri/src/: discord.rs  lib.rs  lyrics.rs  main.rs  playback.rs  settings.rs
src-tauri/src/plugins/: mod.rs
src/components/: SettingRow.test.tsx  SettingRow.tsx
src/components/Settings/: AdvancedSettings.test.tsx  AdvancedSettings.tsx  AppearanceSettings.test.tsx  AppearanceSettings.tsx  DiscordSettings.test.tsx  index.ts  (+7 more)
src/test/: setup.ts
